--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <title>Program With Poker</title>
     <script defer src="./bundle.js"></script>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
