added expectation of what final workspace area will look like

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Program With Poker</title>
+    <title>Card Counting Adventures With JS</title>
     <script defer src="./bundle.js"></script>
     <link rel="stylesheet" href="/style.css" />
 </head>
